--- a/package.json
+++ b/package.json
@@ -8,27 +8,49 @@
     "url": "https://github.com/metaphor-xyz/hooks.git"
   },
   "main": "dist/index.js",
+  "types": "dist",
   "scripts": {
-    "build": "tsc",
+    "build": "webpack --config webpack.config.js",
     "prepublish": "npm run build",
     "check": "npm run lint",
     "lint": "eslint \"src/**/*.{ts,tsx,js,jsx}\"",
     "fix": "eslint --fix \"src/**/*.{ts,tsx,js,jsx}\"",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "dev": "tsc-watch -w",
+    "ceramic": "ceramic daemon"
   },
   "author": "Metaphor",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
+    "@babel/preset-react": "^7.16.5",
+    "@ceramicnetwork/cli": "^1.10.1",
     "@metaphor-xyz/scaffold": "^1.2.1",
     "@types/react": "^17.0.20",
+    "babel-loader": "^8.2.3",
+    "deepmerge": "^4.2.2",
     "husky": "^7.0.4",
     "lint-staged": "^12.0.0",
-    "typescript": "4.4.2"
+    "semantic-release": "^18.0.1",
+    "ts-loader": "^9.2.6",
+    "tsc-watch": "^4.6.0",
+    "typescript": "4.4.2",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-node-externals": "^3.0.0"
   },
   "peerDependencies": {
     "react": ">=16.8"
   },
   "dependencies": {
-    "ethers": "^5.5.2"
+    "@3id/connect": "^0.2.5",
+    "@ceramicnetwork/common": "^1.10.1",
+    "@ceramicnetwork/http-client": "^1.5.3",
+    "@stablelib/random": "^1.0.1",
+    "dids": "^2.4.3",
+    "ethers": "^5.5.2",
+    "key-did-provider-ed25519": "^1.1.0",
+    "key-did-resolver": "^1.4.0"
   }
 }
