--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "fix": "eslint --fix \"src/**/*.{ts,tsx,js,jsx}\"",
     "prepare": "husky install",
     "dev": "tsc-watch -w",
-    "ceramic": "ceramic daemon"
+    "test": "jest"
   },
   "author": "Metaphor",
   "license": "MIT",
@@ -25,13 +25,20 @@
     "@babel/core": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-react": "^7.16.5",
-    "@ceramicnetwork/cli": "^1.10.1",
+    "@babel/preset-typescript": "^7.16.5",
     "@metaphor-xyz/scaffold": "^1.2.1",
+    "@stablelib/random": "^1.0.1",
+    "@testing-library/react-hooks": "^7.0.2",
+    "@types/jest": "^27.0.3",
     "@types/react": "^17.0.20",
     "babel-loader": "^8.2.3",
     "deepmerge": "^4.2.2",
     "husky": "^7.0.4",
+    "jest": "^27.4.5",
+    "jest-environment-ceramic": "^0.14.0",
     "lint-staged": "^12.0.0",
+    "react": "^17.0.2",
+    "react-test-renderer": "^17.0.2",
     "semantic-release": "^18.0.1",
     "ts-loader": "^9.2.6",
     "tsc-watch": "^4.6.0",
@@ -48,7 +55,7 @@
     "@ceramicnetwork/3id-did-resolver": "^1.4.12",
     "@ceramicnetwork/common": "^1.10.1",
     "@ceramicnetwork/http-client": "^1.5.3",
-    "@stablelib/random": "^1.0.1",
+    "@ceramicnetwork/stream-tile": "^1.5.3",
     "dids": "^2.4.3",
     "ethers": "^5.5.2",
     "key-did-provider-ed25519": "^1.1.0",
