--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "main": "dist/index.js",
   "types": "dist",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
+    "build": "tsc",
     "prepublish": "npm run build",
     "check": "npm run lint",
     "lint": "eslint \"src/**/*.{ts,tsx,js,jsx}\"",
@@ -40,12 +40,8 @@
     "react": "^17.0.2",
     "react-test-renderer": "^17.0.2",
     "semantic-release": "^18.0.1",
-    "ts-loader": "^9.2.6",
     "tsc-watch": "^4.6.0",
-    "typescript": "4.4.2",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-node-externals": "^3.0.0"
+    "typescript": "4.4.2"
   },
   "peerDependencies": {
     "react": ">=16.8"
